# http-socket-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
doc_design/: 01_framework_dna.md  02_architecture_philosophy.md  03_api_philosophy.md  04_transport_capability_model.md  05_dispatch_strategy.md  06_session_ownership_model.md  07_state_machine_philosophy.md  08_extension_strategy.md  09_error_model.md  10_feature_flag_strategy.md  11_long_term_evolution.md  12_pre_implementation_guardrails.md  README.md
doc_dev/: 01_dev_scope_and_principles.md  02_crate_module_blueprint.md  03_milestone_and_acceptance.md  04_api_contract_dev.md  05_handshake_protocol_flow.md  06_session_runtime_flow.md  07_extension_dev_guide.md  08_error_observability_guide.md  09_test_strategy_matrix.md  10_feature_release_workflow.md  11_milestone_task_breakdown.md  12_pr_splitting_plan.md  13_pr_work_breakdown.md  14_release_checklist.md  15_axum_integration.md  README.md
examples/: axum_http_socket_server.rs  http_socket_client.rs
src/: lib.rs
src/api/: client.rs  mod.rs  server.rs
src/core/: mod.rs  state.rs
src/error/: mod.rs
src/extension/: auth.rs  middleware.rs  mod.rs  observability.rs  store.rs
src/integration/: axum.rs
src/protocol/: capability.rs  mod.rs  version.rs
src/transport/: mod.rs  (+7 more)
tests/: attach_flow_tests.rs  axum_integration_tests.rs  error_chain_tests.rs  extension_integration_tests.rs  feature_compile_tests.rs  handshake_message_tests.rs  integration_flow_tests.rs  negotiation_select_tests.rs  reconnect_swap_tests.rs  session_state_tests.rs  types_tests.rs
(+13 files in other folders)
