[package]
name = "http-socket"
version = "0.1.0"
edition = "2024"
description = "A capability-negotiated HTTP socket framework prototype with pluggable transport and Axum integration."
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/http-socket"
homepage = "https://github.com/alone-wolf/http-socket-rs"
repository = "https://github.com/alone-wolf/http-socket-rs"

[features]
default = ["client", "server"]
ws = []
sse = []
poll = []
client = []
server = []
tower = ["dep:tower"]
axum = ["dep:axum", "dep:http", "tower", "server"]
tracing = []
metrics = []

[dependencies]
axum = { version = "0.8", optional = true }
http = { version = "1", optional = true }
tower = { version = "0.5", optional = true, features = ["util"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "sync"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "sync"] }
